vendor/libc/include/math.h

float sqrtf(float);
float cosf(float);
float sinf(float);
float atan2f(float, float);
float floorf(float x);
double floor(double x);
float ceilf(float x);
double ceil(double x);
double sqrt(double x);
float powf(float x, float y);
double pow(double x, double y);
float fmodf(float x, float y);
double fmod(double x, double y);
double cos(double x);
float acosf(float x);
double acos(double x);
float fabsf(float x);
double fabs(double x);
double exp(double);
float logf(float);
double log(double);
double sin(double);
double trunc(double);
double log10(double);
double asin(double);
double atan(double);
double tan(double);
double atan2(double, double);