vendor/libc/include/ctype.h

int isdigit(int c);
int isblank(int c);
int isspace(int c);
int toupper(int c);